feat: 重载延迟队列